<resources>
    <string name="app_name">Beadando</string>
    <string name="btn_Add">Add</string>
    <string name="todo_text">To do list</string>
    <string name="createTitle">New TO-DO item</string>
    <string name="todotitle">Title</string>
    <string name="tododesc">Description</string>
    <string name="tododueto">Due to</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>